{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 32,
  "lineage": "43e306b3-affd-2cdd-a02b-807b48621e07",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vps-env-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652971742551:internet-gateway/igw-0ac25785609725c82",
            "id": "igw-0ac25785609725c82",
            "owner_id": "652971742551",
            "vpc_id": "vpc-084896f5ad3b0d576"
          },
          "dependencies": [
            "aws_vpc.vps-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-vps-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652971742551:route-table/rtb-07fbe2e7b3e6348ef",
            "id": "rtb-07fbe2e7b3e6348ef",
            "owner_id": "652971742551",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac25785609725c82",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-084896f5ad3b0d576"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vps-env-gw",
            "aws_vpc.vps-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06eec4a1197ef1c18",
            "route_table_id": "rtb-07fbe2e7b3e6348ef",
            "subnet_id": "subnet-0a6990e73e5feabdf"
          },
          "dependencies": [
            "aws_internet_gateway.vps-env-gw",
            "aws_route_table.route-table-vps-env",
            "aws_subnet.subnet-one",
            "aws_vpc.vps-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-pz-server-vps",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652971742551:security-group/sg-0048fb0ee5022240b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 16261,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 16261
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 16262,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 16262
              }
            ],
            "id": "sg-0048fb0ee5022240b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 16261,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 16261
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 16262,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 16262
              }
            ],
            "name": "allow-pz-server-ports",
            "name_prefix": "",
            "owner_id": "652971742551",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-084896f5ad3b0d576"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vps-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-ssh-vps",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652971742551:security-group/sg-0f48ebcb152375573",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f48ebcb152375573",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-sg",
            "name_prefix": "",
            "owner_id": "652971742551",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-084896f5ad3b0d576"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vps-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652971742551:subnet/subnet-0a6990e73e5feabdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6990e73e5feabdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652971742551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-084896f5ad3b0d576"
          },
          "dependencies": [
            "aws_vpc.vps-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vps-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652971742551:vpc/vpc-084896f5ad3b0d576",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ac5a4f012b81029c",
            "default_route_table_id": "rtb-0ab8cb519d94aa36a",
            "default_security_group_id": "sg-094e10be14aee087c",
            "dhcp_options_id": "dopt-0d296f546ac723ea2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-084896f5ad3b0d576",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ab8cb519d94aa36a",
            "owner_id": "652971742551"
          }
        }
      ]
    }
  ]
}